@@ -67,6 +67,8 @@ class Net::SSLeay::X509 : pointer {
     return $self->get_ocsp_uri;
   }
   
+  native method get_ext_by_NID : int ($nid : int, $lastpos : int);
+  
   native method DESTROY : void ();
   
 }
